test/sparse/vass/sparse-mismatch-dom-err-dom1arr2arr1.good
sparse-mismatch-dom-err-dom1arr2arr1.chpl:3: warning: whole-domain assignment has been serialized (see note in $CHPL_HOME/STATUS)
sparse-mismatch-dom-err-dom1arr2arr1.chpl:4: warning: whole-domain assignment has been serialized (see note in $CHPL_HOME/STATUS)
sparse-mismatch-dom-err-dom1arr2arr1.chpl:8: error: halt reached - Sparse arrays can't be zippered with anything other than their domains and sibling arrays
